[project]
name = "lesson-10-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexey Po",email = "flexxus@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "lesson_10"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
